refactor: Move API Calls into own Class, adjust related code to restore functionality